2006-06-20  Bryce McKinlay  <mckinlay@redhat.com>

	* gnu/classpath/natSystemProperties.cc (insertSystemProperties):
	Bump "java.class.version" to 48.0.

2006-06-20  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am (AM_CXXFLAGS): Define GCJ_VERSIONED_LIBDIR to
	"$(dbexecdir)".
	Build libjvm.la.
	* Makefile.in: Regenerate.
	* jni.cc (the_vm): Rename and export as ...
	(_Jv_the_vm): New exported symbol.
	(_Jv_JNI_AttachCurrentThread): Export.
	(_Jv_JNI_DestroyJavaVM): Replace the_vm references with _Jv_the_vm
	references.
	(_Jv_GetJavaVM): Likewise.
	(JNI_GetDefaultJavaVMInitArgs, JNI_CreateJavaVM,
	JNI_GetCreatedJavaVMs): Move to ...
	* jni-libjvm.cc: New file.

2006-06-19  Andrew Haley  <aph@redhat.com>

	* testsuite/libjava.lang/PR27908.out: New.
	* testsuite/libjava.lang/PR27908.java: New.

2006-06-19  Keith Seitz  <keiths@redhat.com>

	* include/posix-threads.h (_Jv_ThreadDebugSuspend): Declare.
	(_Jv_ThreadDebugResume): Declare.
	(_Jv_ThreadDebugSuspendCount): Declare.
	* posix-threads.cc (_Jv_ThreadDebugSuspend): New function.
	(_Jv_ThreadDebugSuspendCount): New function.
	(_Jv_ThreadDebugResume): New function.

	* include/win32-threads.h (_Jv_ThreadDebugSuspend): Declare.
	(_Jv_ThreadDebugResume): Declare.
	(_Jv_ThreadDebugSuspendCount): Declare.
	* win32-threads.cc (_Jv_ThreadDebugSuspend): New function.
	(_Jv_ThreadDebugSuspendCount): New function.
	(_Jv_ThreadDebugResume): New function.
	
2006-06-16  Andrew Haley  <aph@redhat.com>

	* java/lang/natClassLoader.cc (_Jv_NewClassFromInitializer): Don't
	copy the whole Class instance from the initializer: instead, copy
	everything but the first word (the vtable pointer).
	Change prototype to (const char* class_initializer).
	(_Jv_RegisterNewClasses): Change prototype to (const char**).
	* java/lang/Class.h (_Jv_RegisterNewClasses): Change prototype to
	(const char**).

2006-06-15  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* classpath/Makefile.am: Do not recurse into tools directory.